Changes from jTDS 1.0.2
=======================

02/24/2005 - Alin Sinpalean
 o Corrected bug [1150880] Character Set getting overwritten. Collation
   envchange packets altered the charset specified on connection creation.

02/23/2005 - Alin Sinpalean
 o Implemented feature [1145697] Better handling of OutOfMemoryError. On an
   OutOfMemoryError, TdsCore.nextToken() now consumes the rest of the server
   response to ensure no protocol confusion will occur.
 o Implemented feature [1144733] Make jtds.jar display version no. Now
   "java -jar jtds-1.x.jar" will display the jTDS version to standard output.

02/23/2005 - David Kilzer
 o Fix comment in ConnectionJDBC2(String, Properties) constructor.

02/22/2005 - David Kilzer
 o Added .cvsignore to top-level directory to ignore build and dist directories.

02/19/2005 - Alin Sinpalean
 o Applied patch [1122494] SQL Server Authentication & Named pipes, submitted
   by Kartik Shah. On Windows, local named pipes are always used, now, even for
   remote servers.
 o Implemented feature request [1124636] Better error message for missing
   ntlmauth.dll.

02/17/2005 - Alin Sinpalean
 o Corrected a problem related to cancel synchronization in TdsCore: a race
   condition occured between the cancelPending assignments that could cause
   the Connection to fail. Problem was reproducible using testCancel0003() in
   SAfeTest on a slow client.
 o Corrected bug [1120168] jTDS 101 - TDS data type 0 invalid, caused by
   incomplete column info filled in for dummy CachedResultSets.

02/16/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1122357] INSERT is executed twice by scrollable
   Statement on Sybase. CachedResultSets are now created on top of plain
   ResultSets from scrollable/updateable Statements. The query is only altered
   (by adding "FOR BROWSE") if executed via executeQuery().

02/15/2005 - Alin Sinpalean
 o Altered SQLParser to accept any number of parameters for a PreparedStatement